# mtg_helper

./: .pre-commit-config.yaml  CLAUDE.md  docker-compose.yml  ideas.md  moxfield_haves_2026-04-17-1046Z.csv  nice_to_have.md  nodes.md  plan.md  plan_todo.md
backend/: .env.example  .env.test  Dockerfile  pyproject.toml
backend/src/mtg_helper/: config.py  db.py  main.py
backend/src/mtg_helper/models/: accounts.py  ai.py  cards.py  collections.py  common.py  decks.py  feedback.py  preferences.py  ranking_weights.py
backend/src/mtg_helper/routers/: accounts.py  admin.py  ai.py  cards.py  collections.py  decks.py  feedback.py  health.py  preferences.py
backend/src/mtg_helper/services/: account_service.py  ai_service.py  card_service.py  collection_service.py  conversation_service.py  deck_service.py  embedding_service.py  feedback_service.py  import_service.py  preference_service.py  profile_service.py  ranking_weight_service.py  retrieval_service.py  scryfall.py  tag_service.py
backend/src/mtg_helper/sql/: migrate_001_rename_removal.sql  schema.sql
backend/tests/: conftest.py  test_accounts.py  test_ai_service.py  test_card_search.py  test_card_validation.py  test_collection_filter.py  test_collection_resolution.py  test_collections.py  test_conversation.py  test_deck_crud.py  test_deck_import.py  test_describe.py  test_feedback.py  test_moxfield_export.py  test_preferences.py  test_profile_service.py  test_retrieval_service.py  test_scryfall_pipeline.py  test_tag_service.py
frontend/: .gitignore  Dockerfile  package.json  pnpm-lock.yaml  tsconfig.json  (+1 more)
(+41 files in other folders)
